[package]
name = "bcap"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.4", features = ["derive"] }
libwifi = { git = "https://github.com/beacondb/libwifi", version = "0.3.1" }
nom = "7.1.3"
pcap = "2.0.0"
radiotap = "1.3.0"
sha256 = "1.5.0"
